--- a/code/UI/Components/VideoPanel.razor.scss
+++ b/code/UI/Components/VideoPanel.razor.scss
@@ -1,4 +1,4 @@
-﻿VideoPlayerPanel {
+﻿VideoPanel {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
