--- a/code/UI/Screens/VideoPlayerScreen.razor.scss
+++ b/code/UI/Screens/VideoPlayerScreen.razor.scss
@@ -1,5 +1,5 @@
 ﻿VideoPlayerScreen {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: #111;
@@ -7,14 +7,20 @@
     align-items: center;
     pointer-events: all;
 
-    VideoPlayerPanel {
+    #videoArea {
+        position: relative;
         width: 640px;
         height: 360px;
-        border: 1px solid #FFF8;
+        border: 1px solid #FFF4;
         border-radius: 5px;
+
+        > VideoPanel {
+            width: 100%;
+            height: 100%;
+        }
     }
 
-    AttributionPanel {
+    > AttributionPanel {
         position: absolute;
         z-index: 10;
         bottom: 18%;
