--- a/code/UI/Screens/VideoPlayerScreen.razor
+++ b/code/UI/Screens/VideoPlayerScreen.razor
@@ -6,6 +6,7 @@
     {
         <AttributionPanel Source=@CurrentVideo/>
     }
+    <label id="notice">All copyrighted videos are excerpts displayed for educational purposes.</label>
     <div id="videoArea">
         <VideoPanel @ref=VideoPanel VideoPath=@CurrentVideoPath/>
         <VideoControlOverlay VideoPanel=@VideoPanel/>
