--- a/code/UI/Screens/VideoPlayerScreen.razor.scss
+++ b/code/UI/Screens/VideoPlayerScreen.razor.scss
@@ -12,20 +12,40 @@
     #topArea {
         flex-direction: column;
         width: 100%;
+        height: 20%;
         align-items: center;
         padding: 15px;
 
         #switchArea {
-            margin-top: 15px;
+            flex-direction: column;
+            width: 100%;
+            align-items:center;
+        }
 
-            > SwitchControl {
+        .switch-option {
+            margin-top: 15px;
+            justify-content: center;
+            align-items: center;
+            width: 40%;
+
+            SwitchControl {
+                width: 20%;
                 justify-content: center;
+                opacity: 1;
+                pointer-events: all;
+                transition: opacity 0.08s;
+                align-items: center;
             }
 
             > label {
+                width: 40%;
                 font-family: Roboto;
                 color: white;
                 font-size: 24px;
+
+                &.left {
+                    text-align: right;
+                }
             }
         }
     }
