Use OnTextureData, add loading spinner

--- a/Libraries/videopanel/Code/UI/VideoControlOverlay.razor
+++ b/Libraries/videopanel/Code/UI/VideoControlOverlay.razor
@@ -3,6 +3,7 @@
 @inherits Panel
 
 <root class=@OverlayClass>
+    <image id="spinner" src="ui/img/BufferingCircle.png"/>
     <div id="bottomBar">
         <div class="button symbol" onclick=@TogglePause>@PlayButtonIcon</div>
         <div id="timecodeArea" class=@TimecodeAreaClass>
