--- a/Libraries/videopanel/Code/UI/VideoControlOverlay.razor.scss
+++ b/Libraries/videopanel/Code/UI/VideoControlOverlay.razor.scss
@@ -22,11 +22,38 @@
     }
 }
 
+@keyframes spin {
+    from {
+        transform: rotate( 0deg );
+    }
+
+    to {
+        transform: rotate( 360deg );
+    }
+}
+
 VideoControlOverlay {
     position: absolute;
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    > #spinner {
+        display: none;
+    }
+
+    &.loading > #spinner {
+        display: flex;
+        position: absolute;
+        left: 30%;
+        top: 30%;
+        width: 40%;
+        height: 40%;
+        animation: spin 1s infinite;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
 
     &.conceal > #bottomBar {
         transform: translateY( 100% );
