--- a/Libraries/videopanel/Code/UI/VideoPanel.razor.scss
+++ b/Libraries/videopanel/Code/UI/VideoPanel.razor.scss
@@ -1,4 +1,4 @@
-﻿VideoPanel {
+﻿.video-texture {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
