--- a/code/UI/Screens/VideoPlayerScreen.razor
+++ b/code/UI/Screens/VideoPlayerScreen.razor
@@ -23,7 +23,7 @@
         @if ( UseVideoPlayer )
         {
             <VideoPanel @ref=VideoPanel src=@CurrentVideoPath VideoRoot=@CurrentVideoRoot AudioSource=@AudioSource
-                width=640 height=360 AutoPlay=@true muted="false"/>
+                width=640 height=360 AutoPlay=@true muted="false" TargetMixer=@TargetMixer/>
             <VideoControlOverlay VideoPanel=@VideoPanel AutoHideDelay=@(1f)/>
         }
         else
