Add ShowControls to VideoPanel

--- a/Libraries/videopanel/Code/UI/VideoPanel.razor
+++ b/Libraries/videopanel/Code/UI/VideoPanel.razor
@@ -3,5 +3,8 @@
 @inherits Panel
 
 <root class="video-texture">
-
+    @if ( ShowControls )
+    {
+        <VideoControlOverlay VideoPanel=@this AutoHide=@AutoHideControls AutoHideDelay=@AutoHideDelay/>
+    }
 </root>
